--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "firebase": "^4.1.3",
+    "lodash": "^4.17.4",
     "vue": "^2.3.3",
+    "vue-lodash": "^1.0.3",
     "vue-router": "^2.6.0",
+    "vuefire": "^1.4.3",
     "vuetify": "^0.14.5",
     "vuex": "^2.3.1"
   },
