--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "firebase": "^4.1.3",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "vue": "^2.3.3",
     "vue-lodash": "^1.0.3",
     "vue-router": "^2.6.0",
