--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "chart.js": "^2.6.0",
     "firebase": "^4.1.3",
+    "firebaseui": "^2.3.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "vue": "^2.3.3",
+    "vue-chartjs": "^2.7.2",
     "vue-lodash": "^1.0.3",
     "vue-router": "^2.6.0",
     "vuefire": "^1.4.3",
